--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "^3.11"
 fastapi = "^0.111.0"
+pydantic-settings = "^2.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
