--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "boilerplate-fastapi-poetry"
+name = "boilerplate-fastapi-poetry-docker"
 version = "0.1.0"
-description = "FastAPI + Poetry Boilerplate"
+description = "FastAPI, Poetry, Docker Boilerplate"
 authors = ["Cecilia Lee <ceciliahslee@gmail.com>"]
 readme = "README.md"
 package-mode = false
