build: added image tag to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,11 @@
 services:
   app:
     container_name: fastapi-poetry-docker
-    build: .
+    image: fastapi-poetry-docker
+    build:
+      context: .
+      dockerfile: Dockerfile
+      tags:
+        - "fastapi-poetry-docker"
     ports:
       - "8000:80"
